--- a/Dashboards/economy/index.html
+++ b/Dashboards/economy/index.html
@@ -152,7 +152,7 @@ Skip to main content
 </ul>
 <div class="wrapper nav-main--hidden" id="nav-primary">
 <ul class="primary-nav__list">
-<li class="primary-nav__item  js-nav hide--sm old-ie--display-block"><a class="primary-nav__link col col--md-7 col--lg-9" href="https://www.ons.gov.uk/">Home</a></li>
+<li class="primary-nav__item  js-nav hide--sm old-ie--display-block"><a class="primary-nav__link col col--md-7 col--lg-9" href="/">Home</a></li>
 <li class="primary-nav__item js-nav js-expandable ">
 <a class="primary-nav__link col col--md-8 col--lg-10" href="https://www.ons.gov.uk/businessindustryandtrade" aria-haspopup="true">Business, industry and trade</a>
 <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
