--- a/Dashboards/navigation.html
+++ b/Dashboards/navigation.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7]><html class="no-js lt-ie8 lt-ie7" lang="en"><![endif]-->
 <!--[if IE 7]><html class="no-js lt-ie8 ie7"  lang="en"><![endif]-->
@@ -6,24 +5,25 @@
 <!--[if gt IE 8]><!-->
 <html lang="en">
 <!--<![endif]-->
+
 <head>
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<title>Key figures: Inflation and Price Indices - Office for National Statistics</title>
-<meta charset="utf-8" />
-<meta content="width=device-width,initial-scale=1.0,user-scalable=1" name="viewport">
-<meta content="on" http-equiv="cleartype" />
-<meta name="theme-color" content="#58595B">
-<meta name="apple-mobile-web-app-status-bar-style" content="#58595B">
-<!--[if IE]><![endif]-->
-<!--[if lte IE 8]>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>Home - Office for National Statistics</title>
+    <meta charset="utf-8" />
+    <meta content="width=device-width,initial-scale=1.0,user-scalable=1" name="viewport">
+    <meta content="on" http-equiv="cleartype" />
+    <meta name="theme-color" content="#58595B">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#58595B">
+    <!--[if IE]><![endif]-->
+    <!--[if lte IE 8]>
 		<link rel="stylesheet" href="https://www.ons.gov.uk//cdn.ons.gov.uk/sixteens/b3c7947/css/old-ie.css"/>
 		<![endif]-->
-<!--[if IE 9]>
+    <!--[if IE 9]>
               <link rel="stylesheet" type="text/css" href="https://www.ons.gov.uk//cdn.ons.gov.uk/sixteens/b3c7947/css/ie-9.css">
         <![endif]-->
-<!--[if gt IE 9]><!-->
-<link rel="stylesheet" type="text/css" href="//cdn.ons.gov.uk/sixteens/b3c7947/css/main.css">
-<![endif]-->
+    <!--[if gt IE 9]><!-->
+    <link rel="stylesheet" type="text/css" href="//cdn.ons.gov.uk/sixteens/b3c7947/css/main.css">
+    <![endif]-->
 <script>
 
     // unescape html entities
@@ -34,7 +34,7 @@
 
     
     var dataLayer = [{
-        contentTitle: htmlUnescape("Economy")
+        contentTitle: htmlUnescape("Home")
     }];
 
     
@@ -63,7 +63,7 @@
         })(window,document,'script','dataLayer','GTM-MBCBVQS');</script>
 
 </head>
-<body class="taxonomy_landing_page">
+<body class="home_page">
 
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MBCBVQS"
                       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -72,17 +72,18 @@
 <a class="skiplink" href="#main" tabindex="0">
 Skip to main content
 </a>
-<div id="pagePath" class="hide">/keyfigures</div>
+<div id="pagePath" class="hide">/</div>
 <div class="wrapper">
 <div class="header col-wrap">
 <div class="col col--lg-one-third col--md-one-third">
 <a href="https://www.ons.gov.uk/">
 <!--[if lte IE 8]>
-							<img class="logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo/v2/ons-logo.png" alt="Office for National Statistics">
-						<![endif]-->
-<!--[if gte IE 9]><!-->
-<img class="logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo/v2/ons-logo.svg" alt="Office for National Statistics">
-<![endif]-->
+    <img class="logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo/v2/ons-logo.png" alt="Office for National Statistics">
+    <![endif]-->
+<!--[if gte IE 9]>
+    <!-->
+    <img class="logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo/v2/ons-logo.svg" alt="Office for National Statistics">
+    <![endif]-->
 </a>
 </div>
 <div class="col col--lg-two-thirds col--md-two-thirds hide--sm print--hide language--js__container">
@@ -93,7 +94,7 @@ Skip to main content
 
 
 
-    //cy.ons.gov.uk/economy?:uri=economy
+    //cy.ons.gov.uk/
 " class="language__link">Cymraeg (CY)</a>
 </dd>
 </dl>
@@ -102,7 +103,7 @@ Skip to main content
 <select class="language--js__select" id="lang" name="lang">
 <option value="english" data-url="
 
-    //www.www.ons.gov.uk/economy?:uri=economy
+    //www.www.ons.gov.uk/
 
 
 " selected="selected">English (EN)</option>
@@ -110,7 +111,7 @@ Skip to main content
 
 
 
-    //cy.ons.gov.uk/economy?:uri=economy
+    //cy.ons.gov.uk/
 ">Cymraeg (CY)</option>
 </select>
 </form>
@@ -152,37 +153,31 @@ Skip to main content
 </ul>
 <div class="wrapper nav-main--hidden" id="nav-primary">
 <ul class="primary-nav__list">
-<li class="primary-nav__item  js-nav hide--sm old-ie--display-block"><a class="primary-nav__link col col--md-7 col--lg-9" href="/">Home</a></li>
+<li class="primary-nav__item primary-nav__item--active js-nav hide--sm old-ie--display-block"><a class="primary-nav__link col col--md-7 col--lg-9" href="/">Home</a></li>
+<li class="primary-nav__item  js-nav">
+<a class="primary-nav__link  col col--md-8 col--lg-10" href="/keyfigures">
+Key figures
+</a>
+<li class="primary-nav__item  js-nav">
 <li class="primary-nav__item js-nav js-expandable ">
-<a class="primary-nav__link col col--md-8 col--lg-10" href="https://www.ons.gov.uk/businessindustryandtrade" aria-haspopup="true">Business, industry and trade</a>
+<a class="primary-nav__link col col--md-8 col--lg-10" aria-haspopup="true">Browse by theme</a>
 <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
 <li class="primary-nav__child-item  js-expandable__child">
 <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/business">Business</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/changestobusiness">Changes to business</a>
+<a class="primary-nav__child-link" tabindex="-1" href="/economy">Economy</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/constructionindustry">Construction industry</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/employmentandlabourmarket">Employment and labour market</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/itandinternetindustry">IT and internet industry</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity">People, population and community</a>
 </li>
-<li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/internationaltrade">International trade</a>
-</li>
-<li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/manufacturingandproductionindustry">Manufacturing and production industry</a>
-</li>
-<li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/retailindustry">Retail industry</a>
-</li>
-<li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/tourismindustry">Tourism industry</a>
-</li>
+
 </ul>
 </li>
-<li class="primary-nav__item js-nav js-expandable">
+<!-- <li class="primary-nav__item js-nav js-expandable ">
 <a class="primary-nav__link col col--md-8 col--lg-10" href="/economy" aria-haspopup="true">Economy</a>
 <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
 <li class="primary-nav__child-item  js-expandable__child">
@@ -224,8 +219,8 @@ Skip to main content
 <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork">People not in work</a>
 </li>
 </ul>
-</li>
-<li class="primary-nav__item js-nav js-expandable ">
+</li> -->
+<!-- <li class="primary-nav__item js-nav js-expandable ">
 <a class="primary-nav__link col col--md-8 col--lg-10" href="https://www.ons.gov.uk/peoplepopulationandcommunity" aria-haspopup="true">People, population and community</a>
 <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
 <li class="primary-nav__child-item  js-expandable__child">
@@ -268,6 +263,15 @@ Skip to main content
 <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/cuturalidentity">cuturalidentity</a>
 </li>
 </ul>
+</li> -->
+<a class="primary-nav__link  col col--md-8 col--lg-10" href="https://www.ons.gov.uk/datalist">
+Datasets
+</a>
+</li>
+<li class="primary-nav__item  js-nav">
+<a class="primary-nav__link  col col--md-8 col--lg-10" href="https://www.ons.gov.uk/publications">
+Publications
+</a>
 </li>
 <li class="primary-nav__item  js-nav">
 <a class="primary-nav__link  col col--md-8 col--lg-10" href="https://www.ons.gov.uk/surveys">
@@ -291,129 +295,12 @@ Taking part in a survey?
 </div>
 </div>
 </header>
-<main id="main" role="main" tabindex="-1">
-<div class="page-intro background--gallery">
-<div class="wrapper">
-<div class="col-wrap">
-<div class="col">
-<nav>
-<div class="breadcrumb print--hide">
-<ol class="breadcrumb__list">
-<li class="breadcrumb__item">
-<a class="breadcrumb__link" href="/">Home</a>
-</li>
-<li class="breadcrumb__item">
-<a class="breadcrumb__link" href="/keyfigures">Key figures</a>
-</li>
-<li class="breadcrumb__item">
-<a class="breadcrumb__link" href="/keyfigures/economy">Economy</a>
-</li>
-<li class="breadcrumb__item">
-Inflation and Price Indices
-</li>
-</ol>
-</div>
-</nav>
-<!-- <div class="col col--md-47 col--lg-48">
-<h1 class="page-intro__title ">Key figures: Inflation and Price Indices</h1>
-<p class="page-intro__content">Intro text</p>
-</div> -->
-<!-- <div class="nav-secondary--border-left-lg col col--md-47 col--lg-19 col--lg-offset-2 padding-left margin-top-lg--3">
-<h2 class="margin-top-lg--1">Highlighted content</h2>
-<ul class="list--neutral margin-top--negative-one-fix">
-<li>
-<a href="https://www.ons.gov.uk/economy/nationalaccounts/uksectoraccounts/articles/economicreview/january2018" data-gtm-title="Economic review: January 2018" data-gtm-type="highlighted-links">Economic review: January 2018
-</a>
-</li>
-<li>
-<a href="https://www.ons.gov.uk/economy/nationalaccounts/uksectoraccounts/articles/assessmentoftheukpostreferendumeconomy/september2016" data-gtm-title="Assessment of the UK post-referendum economy: September 2016" data-gtm-type="highlighted-links">Assessment of the UK post-referendum economy: September 2016
-</a>
-</li>
-</ul>
-</div> -->
-</div>
-</div>
-</div>
-</div>
-<div class="page-content border-top--iron-sm border-top--iron-md">
 
-    <iframe src = "http://rob.chambersbristol.co.uk/dashboard/index.html?id=czbh&id=chaw&id=l55o&id=d7g7&id=d7bt&id=l522&title=Dashboard&embed=true&title=Inflation%20and%20price%20indices%20dashboard" frameborder="0" width = "100%" height = "2000px" ></iframe>
 
-</div>
-</main>
-<footer class="print--hide">
-<h2 class="visuallyhidden">Footer links</h2>
-<div class="footer">
-<div class="wrapper">
-<nav>
-<div class="footer-nav col-wrap">
-<div class="col col--lg-one-third col--md-one-third">
-<h3 class="footer-nav__heading">Help</h3>
-<ul class="footer-nav__list">
-<li class="footer-nav__item">
-<a href="https://www.ons.gov.uk/help/accessibility">Accessibility</a>
-</li>
-<li class="footer-nav__item">
-<a href="https://www.ons.gov.uk/help/cookiesandprivacy">Cookies and privacy</a>
-</li>
-<li class="footer-nav__item">
-<a href="https://www.ons.gov.uk/help/termsandconditions">Terms and conditions</a>
-</li>
-</ul>
-</div>
-<div class="col col--lg-one-third col--md-one-third">
-<h3 class="footer-nav__heading">About ONS</h3>
-<ul class="footer-nav__list">
-<li class="footer-nav__item">
-<a href="https://www.ons.gov.uk/aboutus/whatwedo">What we do</a>
-</li>
-<li class="footer-nav__item">
-<a href="https://www.ons.gov.uk/aboutus/careers">Careers</a>
-</li>
-<li class="footer-nav__item">
-<a href="https://www.ons.gov.uk/aboutus/contactus">Contact us</a>
-</li>
-<li class="footer-nav__item">
-<a href="https://www.ons.gov.uk/news">News</a>
-</li>
-<li class="footer-nav__item">
-<a href="https://www.ons.gov.uk/aboutus/transparencyandgovernance/freedomofinformationfoi">Freedom of Information</a>
-</li>
-</ul>
-</div>
-<div class="col col--lg-one-third col--md-one-third">
-<h3 class="footer-nav__heading">Connect with us</h3>
-<ul class="footer-nav__list">
-<li class="footer-nav__item">
-<a href="https://twitter.com/ONS">Twitter</a>
-</li>
-<li class="footer-nav__item">
-<a href="https://www.facebook.com/ONS">Facebook</a>
-</li>
-<li class="footer-nav__item">
-<a href="https://www.linkedin.com/company/office-for-national-statistics">LinkedIn</a>
-</li>
-<li class="footer-nav__item">
-<a href="https://public.govdelivery.com/accounts/UKONS/subscribers/new">Email alerts</a>
-</li>
-</ul>
-</div>
-</div>
-</nav>
-</div>
-<div class="wrapper">
-<div class="footer-license">
-<img class="footer-license__img" alt="OGL" width="60" src="https://www.ons.gov.uk/img/ogl.png">
-<p class="footer-license__text margin-left-sm--0">
-All content is available under the <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0</a>, except where otherwise stated
-</p>
-</div>
-</div>
-</div>
-</footer>
-<!--[if gt IE 8]><!-->
-<script type="text/javascript" src="//cdn.ons.gov.uk/sixteens/b3c7947/js/main.js"></script>
-<script type="text/javascript" src="https://www.ons.gov.uk/js/app.js"></script>
-<![endif]-->
+<!--[if gt IE 8]>
+    <!-->
+    <script type="text/javascript" src="//cdn.ons.gov.uk/sixteens/b3c7947/js/main.js"></script>
+    <script type="text/javascript" src="https://www.ons.gov.uk/js/app.js"></script>
+    <![endif]-->
 </body>
 </html>
