--- a/Dashboards/search.html
+++ b/Dashboards/search.html
@@ -447,7 +447,7 @@ Refine results not available on this prototype
                 </div>
                 <div class="col col--md-17 col--lg-20 height--31-indented-ellipsis background--mercury">
                 <div class="min-height--10 background--gallery padding-top--2 padding-left--1 padding-right--1">
-                <h3 class="flush"><a href="https://www.ons.gov.uk/keyfigures/economy/inflationandpriceindices">Dashboard: Inflation and price indices<span class="box__clickable"></span></a></h3>
+                <h3 class="flush"><a href="./keyfigures/economy/inflationandpriceindices">Dashboard: Inflation and price indices<span class="box__clickable"></span></a></h3>
                 </div>
                 <div class="box__content padding-top--1 padding-right--1 padding-bottom--1 padding-left--1 border-top--iron-sm border-top--iron-md">
                 <p>The rate of increase in prices for goods and services. Measures of <strong>inflation</strong> and prices include consumer price <strong>inflation</strong>, producer price <strong>inflation</strong>, the house price index, index of private housing rental prices, and construction output price indices. </p>
